--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment: dev
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v3
