--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to dev
+name: Build and Deploy to Sandbox
 
 on:
   push:
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: dev
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v3
@@ -42,7 +41,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    environment: dev
     steps:    
     - name: Checkout this repo
       uses: actions/checkout@v3
@@ -56,7 +54,7 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: artifacts
-    - name: Deploy to dev
+    - name: Deploy to Sandbox
       env:
         name: dev
         USERNAME: ${{ secrets.anypoint_platform_username }}
