--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Build and Deploy to qa
+name: Build and Deploy to sample
 
 on:
   push:
-    branches: [ main ]
+    branches: [ sample ]
   pull_request:
-    branches: [ main ]
+    branches: [ sample ]
     
 jobs:
   build:
@@ -54,9 +54,9 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: artifacts
-    - name: Deploy to qa
+    - name: Deploy to dev
       env:
-        name: qa
+        name: dev
         USERNAME: ${{ secrets.anypoint_platform_username }}
         PASSWORD: ${{ secrets.anypoint_platform_password }}
       run: |
