--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,45 @@
 						<username>AlgoliaProject</username>
 						<password>Algolia123</password>
 						<applicationName>algolia-api123410</applicationName>
-						<environment>Sandbox</environment>
+						<environment>dev</environment>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
 						<properties>
 							<key>value</key>
 						</properties>
 					</cloudHubDeployment>
+					<classifier>mule-application</classifier>
+				</configuration>
+				<configuration>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.4.0</muleVersion>
+						<username>AlgoliaProject</username>
+						<password>Algolia123</password>
+						<applicationName>algolia-api123410</applicationName>
+						<environment>qa</environment>
+						<workers>1</workers>
+						<workerType>MICRO</workerType>
+						<properties>
+							<key>value</key>
+						</properties>
+					</cloudHubDeployment>
+					<configuration>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.4.0</muleVersion>
+						<username>AlgoliaProject</username>
+						<password>Algolia123</password>
+						<applicationName>algolia-api123410</applicationName>
+						<environment>prod</environment>
+						<workers>1</workers>
+						<workerType>MICRO</workerType>
+						<properties>
+							<key>value</key>
+						</properties>
+					</cloudHubDeployment>
+					<classifier>mule-application</classifier>
+				</configuration>
 					<classifier>mule-application</classifier>
 				</configuration>
 			</plugin>
