--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
 				</configuration>
+			</plugin>
 				<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
@@ -101,6 +102,7 @@
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
 				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
