--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 						<username>AlgoliaProject</username>
 						<password>Algolia123</password>
 						<applicationName>algolia-api1234</applicationName>
-						<environment>dev</environment>
+						<environment>${env}</environment>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
 						<properties>
