--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           path: target/*.jar
         
   deploydev:
-    needs: [build]
+    needs: build
     runs-on: ubuntu-latest
     steps:    
     - name: Checkout this repo
@@ -51,10 +51,9 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: algolia-api/manual-approval@v1
+    - uses: actions/download-artifact@v3
       with:
-        secret: ${{ github.TOKEN }}
-        approvers: algolia-api
+        name: artifacts
     - name: Deploy to dev
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
@@ -66,7 +65,7 @@ jobs:
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" 
   deployqa:
-    needs: [deploydev]
+    needs: deploydev
     runs-on: ubuntu-latest
     steps:    
     - name: Checkout this repo
@@ -78,10 +77,9 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: algolia-api/manual-approval@v1
+    - uses: actions/download-artifact@v3
       with:
-        secret: ${{ github.TOKEN }}
-        approvers: algolia-api
+        name: artifacts
     - name: Deploy to qa
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
@@ -93,7 +91,7 @@ jobs:
          -Danypoint.username="$USERNAME" \
          -Danypoint.password="$PASSWORD" 
   deployprod:
-    needs: [deployqa]
+    needs: deployqa
     runs-on: ubuntu-latest
     steps:    
     - name: Checkout this repo
@@ -105,10 +103,9 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - uses: algolia-api/manual-approval@v1
+    - uses: actions/download-artifact@v3
       with:
-        secret: ${{ github.TOKEN }}
-        approvers: algolia-api
+        name: artifacts
     - name: Deploy to prod
       env:
         USERNAME: ${{ secrets.anypoint_platform_username }}
@@ -118,5 +115,4 @@ jobs:
         mvn deploy -DmuleDeploy \
          -Dmule.artifact=$artifactName \
          -Danypoint.username="$USERNAME" \
-         -Danypoint.password="$PASSWORD"
-
+         -Danypoint.password="$PASSWORD" 
