--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 						<muleVersion>4.4.0</muleVersion>
 						<username>AlgoliaProject</username>
 						<password>Algolia123</password>
-						<applicationName>algolia-api123412</applicationName>
+						<applicationName>${appname}</applicationName>
 						<environment>${env}</environment>
 						<workers>1</workers>
 						<workerType>MICRO</workerType>
