--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
          -Denv=dev \
          -Dappname=algolia-123243
   approve-qa:
+    if: github.ref == 'refs/heads/sample'
     needs: deploydev
     runs-on: [ubuntu-latest,windows-latest]
     steps:
