--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,10 @@ jobs:
 
       steps:
       - name: Request approval
-        uses: "marvinpinto/action-automatic-approvals@v1"
+        uses: "algolia-api/action-automatic-approvals@v1"
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          users: username1, username2
-          teams: team1, team2
+          users: GayathriNuthalapati, Madhav547
           approvers: 2
  
   deploydev:
