--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,18 +36,18 @@ jobs:
       with:
           name: artifacts
           path: target/*.jar
-  approval:
-      needs: build
-      runs-on: ubuntu-latest
-
-      steps:
-      - name: Request approval
-        uses: "GayathriNuthalapati/algolia-api/action-automatic-approvals@v1"
+  approve-qa:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Await approval for all deployments
+        uses: "Madhav547/auto-approve-action@v2.1.0"
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           users: GayathriNuthalapati, Madhav547
           approvers: 2
- 
+          approval-comment: 'Please approve the deployment to QA.'
+
   deploydev:
     needs: build
     runs-on: ubuntu-latest
