--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Await approval for all deployments
         uses: "Madhav547/auto-approve-action@v2.1.0"
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN_GITHUB }}
           users: GayathriNuthalapati, Madhav547
           approvers: 2
           approval-comment: 'Please approve the deployment to QA.'
