--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build and Deploy to sample
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
     
 jobs:
   build:
